@@ -113,7 +113,9 @@ rng_gen& get_data_seq_generator();
 int get_num_io_generators();
 
 /** @brief Sets the local index for a thread to access the correct I/O RNGs. */
-locked_io_rng_ref set_io_generators_local_index(size_t idx);
+locked_io_rng_ref
+set_io_generators_local_index(size_t idx,
+                              execution_mode mode = execution_mode::training);
 
 /**
  * Return a reference to the global LBANN random number generator used
